- Some bugs fixed - Added Mergeable for entities